--- a/app/src/main/res/layout/item_image_view.xml
+++ b/app/src/main/res/layout/item_image_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.mei.myimageloader.SquareImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.mei.myimageloader.widget.SquareImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/image_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:adjustViewBounds="true"
     android:scaleType="centerCrop">
 
-</com.mei.myimageloader.SquareImageView>
+</com.mei.myimageloader.widget.SquareImageView>
